// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoDataNotice should display a notice based on error type if evaluation fails while loading the report 1`] = `
<ReportErrorNotice
  error={
    Object {
      "data": Object {
        "errorMessage": "test error",
      },
      "status": 400,
    }
  }
/>
`;

exports[`SetupNotice should instruct to add a process definition key if not available 1`] = `
<SetupNotice>
  <p>
    Select a 
    <b
      key="1"
    >
      process definition
    </b>
    .
  </p>
</SetupNotice>
`;

exports[`SetupNotice should instruct to add a process definition version if not available 1`] = `
<SetupNotice>
  <p>
    Select a 
    <b
      key="1"
    >
      process definition
    </b>
    .
  </p>
</SetupNotice>
`;

exports[`SetupNotice should instruct to add group by option if not available 1`] = `
<SetupNotice>
  <p>
    Select what to 
    <b
      key="1"
    >
      Group by
    </b>
    .
  </p>
</SetupNotice>
`;

exports[`SetupNotice should instruct to add view option if not available 1`] = `
<SetupNotice>
  <p>
    Select an option for 
    <b
      key="1"
    >
      View
    </b>
    .
  </p>
</SetupNotice>
`;

exports[`SetupNotice should instruct to add visualization option if not available 1`] = `
<SetupNotice>
  <p>
    Select an option for 
    <b
      key="1"
    >
      Visualization
    </b>
     above.
  </p>
</SetupNotice>
`;
